--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.3.4"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.3.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
