--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_HOST=mongodb+srv://Irina:allright270182@cluster0.3sqy2ng.mongodb.net/db-contacts 
 SECRET_KEY = 7FzNTV4gWB9MpU
-SENGRINE_API_KEY = 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
+# SENGRINE_API_KEY = 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
 BASE_URL = http://localhost:3000
+SENGRINE_API_KEY=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
                    
